# tp_php

./: .gitignore  README.md
.ipynb_checkpoints/: TD1_ProduitMatriceVecteurs-checkpoint.ipynb
MatVec/mpi1/: main  test.txt
MatVec/rma/: Makefile  main  main.cpp  test.txt
OpenCl/TP2/: CMakeLists.txt  calcul_pi.cl  exo1.cpp  testlecture.cpp
OpenCl/ex1/: CMakeLists.txt  mult_mat_ligne.cl
OpenCl/ex2/: CMakeLists.txt  README.md  programme_hote.cpp  stencil.cl
OpenMP/MatVec/mpi1/: Makefile  main  main.cpp
OpenMP/MatVec/rma/: main
OpenMP/tp1/: TD1_ProduitMatriceVecteurs.ipynb
OpenMP/tp1/.ipynb_checkpoints/: TD1_ProduitMatriceVecteurs-checkpoint.ipynb
OpenMP/tp2/Exemple1-20220202/: Makefile  exemple1.cpp  main  sum_tab.cpp
OpenMP/tp3/Exemple1/tp3_v1/: maitre
OpenMP/tp3/Exemple1/v0/: Makefile  esclave  maitre.cpp
SSE/TP1/: copy-normal  copy-normal.c  copy-sse  copy-sse.c  reduce_normal
SSE/TP1/Runnable/: maxvalue4  produit_scalaire_normal  produit_scalaire_sse  reduce_sse
ex1/: Makefile  mult_mat.cl  programme_hote  programme_hote.cpp
tp1/code/Hybride/mpi1/: main.cpp  test.txt
tp1/code/Hybride/rma/: test.txt
tp3/Exemple1/tp3_v1/: Makefile  esclave  esclave.cpp  maitre.cpp
tp3/Exemple1/v0/: maitre
